--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ionic App</title>
+    <title>Wooof</title>
+
+    <meta name="description" content="An application to browse the internet's biggest collection of open source dog pictures.">
+
+    <meta property="og:site_name" content="Wooof">
+    <meta property="og:title" content="Wooof">
+
+    <meta name="author" content="Wooof">
+
+    <meta name="description" content="An application to browse the internet's biggest collection of open source dog pictures.">
+    <meta property="og:description" content="An application to browse the internet's biggest collection of open source dog pictures.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://wooof.ch">
+
+    <meta property="og:image" content="https://wooof.ch/assets/favicon/android-chrome-512x512.png">
+    <meta property="og:image:type" content="image/png">
+
+    <link rel="canonical" href="https://wooof.ch"/>
 
     <base href="/" />
 
@@ -19,8 +37,17 @@
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Ionic App" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Wooof" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="white" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/favicon/favicon-16x16.png">
+    <link rel="mask-icon" href="%PUBLIC_URL%/assets/favicon/safari-pinned-tab.svg" color="#f16664">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#007d8c">
+    <meta name="msapplication-config" content="%PUBLIC_URL%/assets/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
   </head>
 
   <body>
